--- a/css/style2.css
+++ b/css/style2.css
@@ -1,7 +1,16 @@
 body {
     background-color: #ffffff;
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
 
+}
+
+.btn:focus{
+    border-style: none;
+
+}
+
+.head{
+    padding-top: 20px;
 }
 
 .phone_number{
@@ -10,13 +19,27 @@ padding-top: 40px;
 font-size: 20px;
 }
 
+.phone_number a{
+    color: black;
+}
+
 .pay{
 padding-top: 30px;    
 }
 
 .navigation{
     padding-top: 20px;
-    padding-bottom: 20px;
+
+}
+
+.nav{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.nav_bar{
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 
@@ -24,13 +47,33 @@ padding-top: 30px;
     width: 100%;
 }
 
-.main{
-    background-color: #ecf0f1;
+.nav-item a{
+    color:#464646;
+    font-weight: 600;
 }
 
-.title {
-    padding: 0px;
+.nav-item a:hover{
+    color:#e20227;
+    font-weight: 600;
 }
+
+.car{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.main{
+    background-color: #ecf0f1;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.title_price {
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 30px;
+}
+
 
 .tarify{
     background-color:  #ffffff;
@@ -40,6 +83,8 @@ padding-top: 30px;
 
 .body_price{
 padding-left: 0px;
+font-family: 'Lato', sans-serif;
+
 }
 
 .price{
@@ -49,6 +94,7 @@ padding-left: 0px;
     #price-table ul {
         display: table;
         margin: 0 auto;
+        font-family: 'Lato', sans-serif;
         width: 100%;
         max-width: 1100px;
         padding-top: 20px;
@@ -58,6 +104,7 @@ padding-left: 0px;
         display: table-cell;
         position: relative;
         z-index: 0;
+        font-family: 'Lato', sans-serif;
         background-color:#f3f2f2;
         text-align: center;
         border-radius: 9px;
@@ -93,7 +140,7 @@ padding-left: 0px;
     
     .title_box{
         color: #26272d;
-        font-family: Lato;
+        font-family: 'Lato', sans-serif;
         font-size: 25px;
         font-weight: 400;
         letter-spacing: normal;
@@ -103,27 +150,31 @@ padding-left: 0px;
     .but_free{
         width: 100px;
         height: 30px;
+        font-family: 'Lato', sans-serif;
         border-radius: 13px;
-        border: 1px solid #26292c;
-        opacity: 0.2;
-        padding: 0px;
-        font-size: 10px;
-        color: #010102;
-        font-family: Lato;
+        border: 2px solid #ff0000;
+        font-size: 15px;
+        color: #ff0000;
+        font-family: 'Lato', sans-serif;
         margin: 27px 0px 52px 0px;
+        padding-bottom: 30px;
     }
     
     .but_box1{
         padding-top: 33px;
+        font-family: 'Lato', sans-serif;
+
     }
 
     .but_box2{
         padding-top: 33px;
+        font-family: 'Lato', sans-serif;
+
     }
 
     .text_box{
     color: #8c8f94;
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-size: 19px;
     font-weight: 400;
     font-style: normal;
@@ -135,7 +186,7 @@ padding-left: 0px;
     
     .text_box2{
         color: #26292c;
-        font-family: Lato;
+        font-family: 'Lato', sans-serif;
         font-size: 15px;
         font-weight: bold;
         letter-spacing: normal;
@@ -146,7 +197,7 @@ padding-left: 0px;
     .text_middle{
         padding-top: 30px;
         color: #26292c;
-        font-family: Lato;
+        font-family: 'Lato', sans-serif;
         font-size: 15px;
         font-weight: bold;
         letter-spacing: normal;
@@ -195,12 +246,12 @@ padding-left: 0px;
     }
     
     .footer{
-        background-color:#005eff;
+        background-color: #f5f5f5;
     }
 
     .col_footer_1{
-        color: #8c8f94;
-        font-family: Lato;
+        color: #f5f5f5;
+        font-family: 'Lato', sans-serif;
         font-size: 13px;
         font-weight: 400;
         font-style: normal;
@@ -213,6 +264,7 @@ padding-left: 0px;
     .card_footer {
         padding-left: 0px;
         border: none;
+        background-color: #f5f5f5;
     }
     
     .card_body_footer {
@@ -221,7 +273,7 @@ padding-left: 0px;
     
     .col_footer_2{
         color: #8c8f94;
-        font-family: Lato;
+        font-family: 'Lato', sans-serif;
         text-align: left;
     
     }
@@ -248,7 +300,7 @@ padding-left: 0px;
     
     .card_title_footer{
     color: #26272d;
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-size: 11px;
     font-weight: 700;
     font-style: normal;
@@ -260,7 +312,7 @@ padding-left: 0px;
     
     .text_col3_footer{
         color: #8c8f94;
-        font-family: Lato;
+        font-family: 'Lato', sans-serif;
         font-size: 15px;
         font-weight: 400;
         font-style: normal;
@@ -280,7 +332,7 @@ padding-left: 0px;
     .last_line{
     padding-top:10px;
     color: #8c8f94;
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-size: 13px;
     font-weight: 400;
     font-style: normal;
